# typed-geometry

./: .clang-format  CMakeLists.txt  Changelog.md  README.md
cmake/: IsCPUExtensionSupported.cmake  SourceGroup.cmake
cmake/checks/: cpu_bmi2.cc  cpu_lzcnt.cc
codegen/: function-parser.py  object-function-generator.py
docs/: Objects.md
src/tg/: typed-geometry-lean.hh  typed-geometry-std.hh  typed-geometry.cc  typed-geometry.hh  typed-math-lean.hh  typed-math.hh
src/tg/detail/: constants.hh  constructors.hh  errors.hh  functions.hh  half.hh  io.hh  limits.hh  literals.hh  macros.hh  op_helper.hh  operators.hh  pos_ops.hh  quarter.hh  random.hh  scalar_math.hh  scalar_traits.hh  shape.hh  size_ops.hh  special_values.hh  tg_traits.hh  traits.hh  types.hh  utility.hh  vec.hh  vec_ops.hh
src/tg/detail/functions/: aabb.hh  area.hh  centroid.hh  clamp.hh  closest_points.hh  contains.hh  coordinates.hh  cross.hh  data_ptr.hh  direction.hh  distance.hh  dot.hh  intersection.hh  inverse.hh  length.hh  minmax.hh  mix.hh  normal.hh  normalize.hh  outer_product.hh  project.hh  rasterize.hh  rotation.hh  round.hh  scaling.hh  subvector.hh  tangent.hh  translation.hh  transpose.hh  uniform.hh  volume.hh
src/tg/detail/operators/: common.hh  ops_angle.hh  ops_mat.hh  ops_pos.hh  ops_size.hh  ops_triangle.hh  ops_vec.hh
src/tg/detail/scalars/: quarter.hh  scalar_math.hh
src/tg/std/: hash.hh  io.hh  less.hh
src/tg/types/: angle.hh  box.hh  color.hh  halfspace.hh  hyperplane.hh  line.hh  mat.hh  plane.hh  pos.hh  ray.hh  scalar.hh  segment.hh  shape.hh  size.hh  triangle.hh  types.hh  vec.hh
src/tg/types/objects/: box.hh  circle.hh  hyperplane.hh  line.hh  objects.hh  ray.hh  sphere.hh  triangle.hh
src/typed-geometry/: tg-lean.hh  tg-std.hh  tg.cc  tg.hh
src/typed-geometry/common/: assert.cc  constants.hh  limits.hh  random.hh  scalar_math.hh  swizzling.hh
src/typed-geometry/detail/: assert.cc  assert.hh  color-literals.hh  color_traits.hh  comp_traits.hh  constants.hh  constexpr_helper.hh  constructors-fun.hh  constructors-lean.hh  constructors.hh  fixed_int.hh  fixed_int_gen.hh  fixed_uint.hh  fixed_uint_gen.hh  functions.hh  intrinsics.hh  iterators.hh  literals.hh  macros.hh  noise_helper.hh  operators.hh  optional.hh  random.hh  scalar_traits.hh  special_values.hh  sum_of_pos.hh  tests.hh  tg_traits.hh  type-ctor-impl.hh  utility.hh
src/typed-geometry/detail/functions/: aabb.hh  area.hh  centroid.hh  closest_points.hh  contains.hh  coordinates.hh  cross.hh  data_ptr.hh  determinant.hh  diag.hh  direction.hh  distance.hh  dot.hh  interpolate.hh  intersection.hh  inverse.hh  length.hh  math.hh  minmax.hh  mix.hh  norm.hh  normal.hh  normalize.hh  outer_product.hh  (+11 more)
src/typed-geometry/ext/: swizzling.hh
src/typed-geometry/feature/: assert.hh  basic.hh  bezier.hh  colors.hh  fixed_int.hh  fixed_int_gen.hh  fixed_uint.hh  fixed_uint_gen.hh  fwd_diff.hh  intersections.hh  interval.hh  matrix.hh  noise.hh  objects.hh  quadric.hh  quat.hh  random.hh  std-interop.hh  swizzling.hh  tests.hh  vector.hh
src/typed-geometry/functions/: aabb.hh  angle.hh  area.hh  bounds.hh  centroid.hh  circumference.hh  closest_points.hh  contains.hh  coordinates.hh  cross.hh  data_ptr.hh  determinant.hh  diag.hh  direction.hh  distance.hh  dot.hh  eigenvalues.hh  gaussian.hh  interpolate.hh  intersection.hh  inverse.hh  length.hh  look_at.hh  math.hh  minmax.hh  mix.hh  norm.hh  normal.hh  normalize.hh  orthogonal.hh  orthographic.hh  outer_product.hh  perimeter.hh  perpendicular.hh  perspective.hh  predicates.hh  project.hh  quadrics.hh  random_choice.hh  rasterize.hh  (+16 more)
src/typed-geometry/std/: hash.hh  io.hh  less.hh
src/typed-geometry/tests/: dir_tests.hh  mat_tests.hh  scalar_tests.hh  triangle_tests.hh  vec_tests.hh
src/typed-geometry/types/: angle.hh  array.hh  bezier.hh  capped_array.hh  capped_vector.hh  color.hh  comp.hh  dir.hh  fwd.hh  hsl.hh  mat.hh  pos.hh  quadric.hh  quat.hh  random.hh  range.hh  scalar.hh  shape.hh  size.hh  span.hh  srgb.hh  transform.hh  types.hh  vec.hh
tests/: CMakeLists.txt  asm_test.hh  asm_tester.cc  asm_tester.hh  impl-report.cc  main.cc  pretty-printer.cc  random_ctors.hh
tests/asm/: basics.cc
tests/feature/basic/: basics.cc  clamp.cc  ilog.cc  limits.cc  minmax.cc  mix.cc  operators.cc  round.cc  scalars.cc  sizes.cc  statistics.cc  usage.cc  wrap.cc
tests/feature/bezier/: bezier.cc
tests/feature/color/: basics.cc
tests/feature/fixed_int/: fixed_int.cc  fixed_uint.cc  generate_fixed_uint_multiplications.cc
tests/feature/fwd_diff/: fwd_diff.cc
tests/feature/intersections/: aabb-intersect.cc  intersection.cc  intersects.cc  plane-intersect.cc  ray-intersect.cc  segment3-sphere-surface.cc
tests/feature/interval/: interval.cc
tests/feature/matrix/: compose.cc  decompose.cc  determinant.cc  diag.cc  eigenvalue_decomposition.cc  from_data.cc  inverse.cc  norm.cc  outer_product.cc  rotation.cc  scaling.cc  submatrix.cc  translation.cc  transpose.cc
tests/feature/objects/: aabb.cc  any_point.cc  area.cc  barycoords.cc  box.cc  centroid.cc  closest_points.cc  constants.cc  contains.cc  converter.cc  coordinates.cc  direction.cc  distance.cc  faces.cc  frustum.cc  interpolate.cc  mats.cc  objects.cc  perimeter.cc  project.cc  rasterize.cc  size.cc  tangent.cc  triangles.cc  volume.cc
tests/feature/quadric/: quadrics.cc
tests/feature/quat/: quats.cc
tests/feature/random/: random.cc  shuffle.cc  uniform-conversion.cc  uniform.cc
tests/feature/std-interop/: std.cc
tests/feature/swizzling/: swizzle.cc
tests/feature/tests/: vec_tests.cc
tests/feature/vector/: comps.cc  cross.cc  dot.cc  length.cc  normalize.cc  reflect.cc  refract.cc  subvector.cc
tests/functions/: matrix_helper.hh  rasterize.cc  vector_helper.hh
tests/smoke/: tg-lean.cc  tg-std.cc  tg.cc
tests/smoke/features/: basic.cc  bezier.cc  colors.cc  fixed_int.cc  fwd_diff.cc  intersections.cc  interval.cc  matrix.cc  objects.cc  quadric.cc  quat.cc  random.cc  std-interop.cc  swizzling.cc  tests.cc  vector.cc
tests/types/: optional.cc  range.cc  span.cc
(+142 files in other folders)
